--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,10 @@ dmypy.json
 .pyre/
 DesignBuilderModel/~GinevraResidence.dsb.lck
 *.lck
+.idea/encodings.xml
+.idea/workspace.xml
+.idea/vcs.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/libraries/R_User_Library.xml
+.idea/ict4building.iml
